# fastapi-odmantic

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  mongo-init.js  pyproject.toml
app/: main.py
app/api/: router.py
app/api/endpoints/: todos.py
app/core/: config.py
app/db/: engine.py
app/models/: todos.py
